--- a/ReservationMaker161019/app/src/main/res/layout/activity_main.xml
+++ b/ReservationMaker161019/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,32 @@
     android:orientation="vertical"
     tools:context="com.lhj.reservationmaker161019.MainActivity">
 
-    <Chronometer
-        android:id="@+id/crnTakenTime"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:format="  예약 소요 시간  %s "
-        android:gravity="center"
-        android:textSize="20sp" />
+        android:orientation="vertical" >
+
+        <Chronometer
+            android:id="@+id/crnTakenTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:format="  예약 소요 시간  %s "
+            android:gravity="center"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/strStart" />
+    </LinearLayout>
 
     <RadioGroup
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:id="@+id/rdgDateTime">
+        android:layout_height="wrap_content" >
 
         <RadioButton
-            android:id="@+id/rdbDate"
+            android:id="@+id/rdbCal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strCalSet" />
@@ -40,98 +50,100 @@
         android:layout_weight="1"
         android:gravity="center" >
 
-        <DatePicker
-            android:id="@+id/dpcReservation"
+        <CalendarView
+            android:id="@+id/calReservation"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:visibility="invisible" />
+            android:showWeekNumber="false" />
 
         <TimePicker
             android:id="@+id/tpcReservation"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:timePickerMode="spinner"
-            android:gravity="center"
-            android:visibility="invisible" />
+            android:timePickerMode="spinner" />
     </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorFooter"
-        android:gravity="center">
+        android:background="@color/colorFooter">
+
+        <Button
+            android:id="@+id/btnFinish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/strFinish"
+            android:layout_marginEnd="@dimen/textview_margin" />
 
         <TextView
             android:id="@+id/textYear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strInitYear"
-            android:layout_marginLeft="@dimen/textview_margin" />
+            android:layout_marginStart="@dimen/textview_margin" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strYear"
-            android:layout_marginRight="@dimen/textview_margin" />
+            android:layout_marginEnd="@dimen/textview_margin" />
 
         <TextView
             android:id="@+id/textMonth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strInitMonth"
-            android:layout_marginLeft="@dimen/textview_margin" />
+            android:layout_marginStart="@dimen/textview_margin" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strMonth"
-            android:layout_marginRight="@dimen/textview_margin" />
+            android:layout_marginEnd="@dimen/textview_margin" />
 
         <TextView
             android:id="@+id/textDay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strInitDay"
-            android:layout_marginLeft="@dimen/textview_margin" />
+            android:layout_marginStart="@dimen/textview_margin" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strDay"
-            android:layout_marginRight="@dimen/textview_margin" />
+            android:layout_marginEnd="@dimen/textview_margin" />
 
         <TextView
             android:id="@+id/textHour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strInitHour"
-            android:layout_marginLeft="@dimen/textview_margin" />
+            android:layout_marginStart="@dimen/textview_margin" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strHour"
-            android:layout_marginRight="@dimen/textview_margin" />
+            android:layout_marginEnd="@dimen/textview_margin" />
 
         <TextView
             android:id="@+id/textMinute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strInitMinute"
-            android:layout_marginLeft="@dimen/textview_margin" />
+            android:layout_marginStart="@dimen/textview_margin" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strMinute"
-            android:layout_marginRight="@dimen/textview_margin" />
+            android:layout_marginEnd="@dimen/textview_margin" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/strReserved"
-            android:layout_marginLeft="@dimen/textview_margin"
-            android:layout_marginRight="@dimen/textview_margin" />
+            android:layout_marginStart="@dimen/textview_margin" />
     </LinearLayout>
 </LinearLayout>
