--- a/Activities161123/app/src/main/res/layout/activity_second.xml
+++ b/Activities161123/app/src/main/res/layout/activity_second.xml
@@ -9,8 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.lhj.activities161123.SecondActivity"
-    android:background="@color/bkgSecondAct">
+    android:background="@color/bkgSecondAct"
+    tools:context="com.lhj.activities161123.SecondActivity">
 
     <Button
         android:id="@+id/btnReturn"
