--- a/Activities161123/app/src/main/res/values/colors.xml
+++ b/Activities161123/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="bkgSecondAct">#00ff00</color>
+    <color name="bkgSecondAct">#00FF00</color>
+    <color name="bkgThirdAct">#EEFFFF</color>
 </resources>
